--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <html>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+
+<head>
+</head>
+
+<section class="main-content">
+	<div class="demo-area">
+		<div>
+			<canvas id="c"></canvas>
+		</div>
+		<div style="margin: 10px 0;">
+			<input id="url" type="text"/>
+			<button id="loadGIF">Load</button>
+			<button id="playpause">Play/Pause</button>
+		</div>
+
+		<div>
+			<input id="speed" type="range" min="1" max="30" step="1" value="15"> GifSpeed
+		</div>
+	</div>
+</section>
+<script src="main.js"></script>
+<script src="sub.js"></script>
 </html>
