--- a/index.html
+++ b/index.html
@@ -2,23 +2,17 @@
 
 <head>
 </head>
-
-<section class="main-content">
-	<div class="demo-area">
 		<div>
 			<canvas id="c"></canvas>
 		</div>
 		<div style="margin: 10px 0;">
-			<input id="url" type="text"/>
+			<input id="url"placeholder="Enter the GIF url!" type="text"/>
 			<button id="loadGIF">Load</button>
 			<button id="playpause">Play/Pause</button>
 		</div>
 
 		<div>
-			<input id="speed" type="range" min="1" max="30" step="1" value="15"> GifSpeed
+			<input id="speed" type="range" min="1" max="30" step="1" value="15" > Gif Speed</input>
 		</div>
-	</div>
-</section>
 <script src="main.js"></script>
-<script src="sub.js"></script>
 </html>
